Improve loading screens with an actual animated loading indicator

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 		</div>
 		<div class="loading_screen">
 			<div>
-				<icon big>cycle</icon>
+				<div class="indeterminate-progress-bar">
+					<div></div>
+				</div>
 				<div>Загрузка...</div>
 			</div>
 		</div>
