Add browser icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/material-symbols/material-symbols.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/day.css">
+	<link rel="icon" href="./favicon.svg"/>
 	<title>EnglishCheatsheet</title>
 </head>
 <body>
