--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="js/main.js" defer></script>
 	<link rel="stylesheet" href="css/material-symbols/material-symbols.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/day.css">
+	<!-- <link rel="stylesheet" href="css/day.css"> -->
 	<link rel="icon" href="./favicon.svg"/>
 	<title>EnglishCheatsheet</title>
 </head>
