--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
 			</div>
 		</div>
 	</main>
+	<h2 style="color: #fafafa;">Hello from ChatGPT</h2>
+	<h2 style="color: #fafafa;">Powered by V idea! 242424</h2>
 </body>
 </html>
