--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script src="js/marked/marked.min.js"></script>
 	<script src="js/requests.js"></script>
 	<script src="js/main.js" defer></script>
+	<link rel="preload" href="css/material-symbols/material-symbols.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="css/material-symbols/material-symbols.css">
 	<link rel="stylesheet" href="css/style.css">
 	<!-- <link rel="stylesheet" href="css/day.css"> -->
